pp2/samples/tested/functions.decaf.test

*** Error line 13.
  b = NewArray(3, int);
      ^^^^^^^^
*** syntax error

